XML bugfix, Filter and Sort for DBConvert Bugfix